fixed tests, uupdated the docs and setup both RecordSets and Tables to return emtpty benefactor ID, as the existing auth checks already cover those cases.